Fix MongoDB connection issue

--- a/fasttemplates/templates/baselayout/requirements.txt
+++ b/fasttemplates/templates/baselayout/requirements.txt
@@ -1,10 +1,12 @@
 annotated-types
 anyio
+uvicorn
 fastapi
 hiredis
 idna
 pydantic
 pydantic_core
+pydantic_settings
 python-dotenv
 python-multipart
 PyYAML
