--- a/fasttemplates/templates/baselayout/docker-compose.yml
+++ b/fasttemplates/templates/baselayout/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   backend:
     build: .
-    command: uvicorn main:app --host 0.0.0.0 --port 80 --reload --log-level debug
+    command: uvicorn app.main:app --host 0.0.0.0 --port 80 --reload --log-level debug
     volumes:
       - .:/app
     ports:
